# salesforce_login_button

./: .env-template  .gitignore  Makefile  main.py  pyproject.toml
demo/: README.md  callback.py  fastapi_demo.py  marimo_demo.py
demo/notebooks/: demo.py
salesforce_login_button/: widget.py
salesforce_login_button/fast_api/: __init__.py  handlers.py
salesforce_login_button/handlers/: fastapi.py  server.py
salesforce_login_button/handlers/fastapi/: README.md  oauth.py
salesforce_login_button/server/: README.md  __init__.py  app.py
salesforce_login_button/static/: index.js  popup.html
salesforce_login_button/widget/: __init__.py  widget.py
salesforce_login_button/widget/static/: index.html  index.js
tests/: test_app.py  test_handlers_fastapi.py  test_integration_fastapi.py
tests/fastapi/: test_handlers.py
