[project]
name = "salesforce_login_button"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget[dev]>=0.9.18",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "starlette>=0.46.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "watchfiles>=1.0.5",
]
fastapi = [
    "fastapi>=0.115.12",
]
