[project]
name = "salesforce_login_button"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Stephen Funk", email = "stephenlfunk@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["salesforce", "SOQL", "simple-salesforce", "oauth", "notebook", "anywidget", "Jupyter", "marimo"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
]

dependencies = [
    "anywidget[dev]>=0.9.18",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "simple-salesforce>=1.12.6",
    "starlette>=0.46.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-httpx>=0.35.0",
    "salesforce-login-button",
    "watchfiles>=1.0.5",
]
fastapi = [
    "fastapi>=0.115.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.uv.sources]
salesforce-login-button = { workspace = true }
